// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty 1`] = `
<div
  class="root s-ufYNuImLwCAK"
>
  <audio
    autoplay=""
    class="s-ufYNuImLwCAK"
    crossorigin="anonymous"
    data-testid="audio"
  />
  <div
    class="content s-ufYNuImLwCAK"
  >
    <span
      class="current s-ufYNuImLwCAK"
    />
     
    <div
      class="player s-ufYNuImLwCAK"
    >
      <span
        class="controls s-ufYNuImLwCAK"
      >
        
        <!--&lt;AddToPlaylist&gt;-->
         
        <span
          class="s-4uzssCMAypGt"
        >
          <button
            class="iconOnly noBorder s-zdMNlEQUhDx4"
            data-testid="shuffle-button"
          >
            <i
              class="icons i-mdi-shuffle s-zdMNlEQUhDx4"
            />
             
             
             
          </button>
          <!--&lt;Button&gt;-->
        </span>
        <!--&lt;Shuffle&gt;-->
         
        <button
          class="iconOnly noBorder s-zdMNlEQUhDx4"
          data-testid="previous-button"
        >
          <i
            class="icons i-mdi-skip-previous s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="iconOnly large s-zdMNlEQUhDx4"
          data-testid="play-button"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="iconOnly noBorder s-zdMNlEQUhDx4"
          data-testid="next-button"
        >
          <i
            class="icons i-mdi-skip-next s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
        <!--&lt;Controls&gt;-->
         
        <span
          class="s-aAPY0ehrLWVj"
        >
          <button
            class="iconOnly noBorder s-zdMNlEQUhDx4"
            data-testid="repeat-button"
          >
            <i
              class="icons i-mdi-repeat s-zdMNlEQUhDx4"
            />
             
             
             
          </button>
          <!--&lt;Button&gt;-->
        </span>
        <!--&lt;Repeat&gt;-->
         
      </span>
       
      <div
        class="s-CYN3HdtfaXVR"
      >
        <span
          class="s-CYN3HdtfaXVR"
        >
          0:00
        </span>
         
        <div
          class="wrapper __w-full_zgg3e0_zgg3e0 s-27Pxhr5HNZBc"
        >
          <input
            class="__w-full_zgg3e0_zgg3e0 s-27Pxhr5HNZBc"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack s-27Pxhr5HNZBc"
          >
            <span
              class="progress s-27Pxhr5HNZBc"
              style="right:100%"
            />
          </div>
        </div>
        <!--&lt;Slider&gt;-->
         
        <span
          class="s-CYN3HdtfaXVR"
        >
          0:00
        </span>
      </div>
      <!--&lt;Time&gt;-->
    </div>
     
    <span
      class="volume s-ufYNuImLwCAK"
    >
      <div
        class="s-80RvWJI4A9sy"
      >
        <span
          class="volume-slider s-80RvWJI4A9sy"
        >
          <div
            class="wrapper __w-full_aghqzd_aghqzd s-27Pxhr5HNZBc"
          >
            <input
              class="__w-full_aghqzd_aghqzd s-27Pxhr5HNZBc"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack s-27Pxhr5HNZBc"
            >
              <span
                class="progress s-27Pxhr5HNZBc"
                style="right:0%"
              />
            </div>
          </div>
          <!--&lt;Slider&gt;-->
        </span>
         
        <button
          class="iconOnly noBorder s-zdMNlEQUhDx4"
          data-testid="mute-button"
        >
          <i
            class="icons i-mdi-volume s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </div>
      <!--&lt;Volume&gt;-->
    </span>
  </div>
</div>
`;

exports[`With track list 1`] = `
<div
  class="root s-ufYNuImLwCAK"
>
  <audio
    autoplay=""
    class="s-ufYNuImLwCAK"
    crossorigin="anonymous"
    data-testid="audio"
    src="./no-duration.mp3"
  />
  <div
    class="content s-ufYNuImLwCAK"
  >
    <span
      class="current s-ufYNuImLwCAK"
    >
      <button
        class="undefined root s-B4OUyNjosq8C"
      >
        <a
          class="s-B4OUyNjosq8C"
          href="#/album/1"
        >
          <button
            class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
          >
            <img
              alt="./# Films/cover.jpg"
              class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
              loading="lazy"
              src="./%23 Films/cover.jpg"
            />
             
          </button>
          <!--&lt;Image&gt;-->
        </a>
         
        <div
          class="track s-B4OUyNjosq8C"
        >
          <span
            class="title s-B4OUyNjosq8C"
          >
            file 1
          </span>
           
          <span
            class="s-B4OUyNjosq8C"
          >
            <a
              class="text-sm underlined"
              href="#/artist/0"
              onclick="event.stopPropagation()"
            >
              Someone
            </a>
          </span>
        </div>
         
         
      </button>
      <!--&lt;Track&gt;-->
    </span>
     
    <div
      class="player s-ufYNuImLwCAK"
    >
      <span
        class="controls s-ufYNuImLwCAK"
      >
        <span>
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper s-vOP9EO5q76eY"
          >
            <button
              class="iconOnly noBorder s-zdMNlEQUhDx4"
              data-testid="add-to-playlist-button"
            >
              <i
                class="icons i-mdi-plus-box-multiple s-zdMNlEQUhDx4"
              />
               
               
              
               
            </button>
            <!--&lt;Button&gt;-->
          </span>
           
          
          <!--&lt;Dropdown&gt;-->
          <!--&lt;AddToPlaylist&gt;-->
        </span>
        
        <!--&lt;AddToPlaylist&gt;-->
         
        <span
          class="s-4uzssCMAypGt"
        >
          <button
            class="iconOnly noBorder s-zdMNlEQUhDx4"
            data-testid="shuffle-button"
          >
            <i
              class="icons i-mdi-shuffle s-zdMNlEQUhDx4"
            />
             
             
             
          </button>
          <!--&lt;Button&gt;-->
        </span>
        <!--&lt;Shuffle&gt;-->
         
        <button
          class="iconOnly noBorder s-zdMNlEQUhDx4"
          data-testid="previous-button"
        >
          <i
            class="icons i-mdi-skip-previous s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="iconOnly large s-zdMNlEQUhDx4"
          data-testid="play-button"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="iconOnly noBorder s-zdMNlEQUhDx4"
          data-testid="next-button"
        >
          <i
            class="icons i-mdi-skip-next s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
        <!--&lt;Controls&gt;-->
         
        <span
          class="s-aAPY0ehrLWVj"
        >
          <button
            class="iconOnly noBorder s-zdMNlEQUhDx4"
            data-testid="repeat-button"
          >
            <i
              class="icons i-mdi-repeat s-zdMNlEQUhDx4"
            />
             
             
             
          </button>
          <!--&lt;Button&gt;-->
        </span>
        <!--&lt;Repeat&gt;-->
         
        <button
          class="__invisible_bscvrs_bscvrs iconOnly noBorder s-zdMNlEQUhDx4"
        >
          <i
            class="icons i-mdi-heart-outline s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
      <div
        class="s-CYN3HdtfaXVR"
      >
        <span
          class="s-CYN3HdtfaXVR"
        >
          0:00
        </span>
         
        <div
          class="wrapper __w-full_zgg3e0_zgg3e0 s-27Pxhr5HNZBc"
        >
          <input
            class="__w-full_zgg3e0_zgg3e0 s-27Pxhr5HNZBc"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack s-27Pxhr5HNZBc"
          >
            <span
              class="progress s-27Pxhr5HNZBc"
              style="right:100%"
            />
          </div>
        </div>
        <!--&lt;Slider&gt;-->
         
        <span
          class="s-CYN3HdtfaXVR"
        >
          0:00
        </span>
      </div>
      <!--&lt;Time&gt;-->
    </div>
     
    <span
      class="volume s-ufYNuImLwCAK"
    >
      <div
        class="s-80RvWJI4A9sy"
      >
        <span
          class="volume-slider s-80RvWJI4A9sy"
        >
          <div
            class="wrapper __w-full_aghqzd_aghqzd s-27Pxhr5HNZBc"
          >
            <input
              class="__w-full_aghqzd_aghqzd s-27Pxhr5HNZBc"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack s-27Pxhr5HNZBc"
            >
              <span
                class="progress s-27Pxhr5HNZBc"
                style="right:0%"
              />
            </div>
          </div>
          <!--&lt;Slider&gt;-->
        </span>
         
        <button
          class="iconOnly noBorder s-zdMNlEQUhDx4"
          data-testid="mute-button"
        >
          <i
            class="icons i-mdi-volume s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </div>
      <!--&lt;Volume&gt;-->
    </span>
  </div>
</div>
`;
